[tool:pytest]
addopts = --doctest-modules
; use "--cov-report term-missing --cov ." to also run coverage.
; remember to clear numba cache and disable Numba JIT for accurate coverage.
; use "make numba-clean" and "export NUMBA_DISABLE_JIT=1".
norecursedirs = doc

[metadata]
name = skan
version = 0.11.0.dev0
url = https://jni.github.io/skan
download_url = https://github.com/jni/skan
license = BSD 3-Clause
license_file = LICENSE
description = Skeleton analysis in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Juan Nunez-Iglesias
author_email = juan.nunez-iglesias@monash.edu
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
zip_safe = False
setup_requires =
    wheel
package_dir =
    =src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    imageio>=2.0
    matplotlib>=3.0
    networkx>=2.0
    numba>=0.50
    numpy>=1.16.5
    numpydoc>=0.9.2
    pandas>=1.0
    openpyxl>=2.4
    scikit-image>=0.17
    scipy>=1.2.0
    toolz>=0.10.0
    tqdm>=4.56.0

[options.packages.find]
where = src

[options.package_data]
* = *.tif, *.zarr

[options.extras_require]
all =
    scikit-image[data]
testing =
    coverage
    hypothesis
    pytest
    pytest-cov
    seaborn<1.0
    tifffile
docs =
    sphinx-material
    napari[all]@git+https://github.com/jni/napari.git@update-shapes-color-mapping
    sphinx
    jupyter
    notebook
    seaborn<1.0
    sphinx-toggleprompt
    sphinx-copybutton
    sphinxcontrib-bibtex
    myst-nb
